syntax = "proto3";
package metadata;

import "google/protobuf/wrappers.proto";

service MetadataService {
  rpc GetMetadatas(getMetadatasReq) returns (getMetadatasRes);
}

message getMetadatasReq {
  string userId = 1;
}

message Metadata {
  string id = 1;
  string userId = 2;
  repeated string files = 3;
  string title = 4;
  string createdAt = 5;
}

message getMetadatasRes {
  repeated Metadata metadatas = 1;
}